--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <header>
     <div class="container">
-        <div class="margem banner">
+        <div class="margembanner">
         </div>
     </div>
-    <div class="media flipped">
         <div class="fakeimg">
             <img src="https://images.pexels.com/photos/459225/pexels-photo-459225.jpeg?cs=srgb&dl=daylight-environment-forest-459225.jpg&fm=jpg" alt="" style="width:200px;height:150px;"></div>
         <div class="content "></div>
